2006-07-18  Sven Neumann  <sven@gimp.org>

	* app/actions/edit-actions.c: improved tooltips for strong
	undo/redo actions (bug #347675).

2006-07-18  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_image): use
	file_utils_uri_display_basename() instead of g_path_get_basename()
	to get an uri's basename. Fixes bug #347544.

2006-07-18  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimppaletteeditor.c (gimp_palette_editor_get_index,
	 gimp_palette_editor_set_index, gimp_palette_editor_max_index):
	fixed potential crash based on a patch from David Gowers (bug #347593).

2006-07-18  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/image.pdb: fixed docs for gimp-image-add-layer
	as pointed out in bug #347861.

	* app/pdb/image_cmds.c
	* libgimp/gimpimage_pdb.c: regenerated.

2006-07-16  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-rgb.c: gimpcolor.RGB is now a sequence,
	so we can swap it in for PDB color types.

2006-07-16  Manish Singh  <yosh@gimp.org>

        * configure.in: bump up python requirement to 2.3.5 and pygtk to
        2.8.0, in preparation for depending on features not in prior
        releases.

2006-07-16  Kevin Cozens  <kcozens@cvs.gnome.org>

	* configure.in
	* plug-ins/Makefile.am: Added --disable-script-fu to allow building
	of GIMP without the Script-Fu plug-in. See bug #347570.

2006-07-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-exif.c (jpeg_setup_exif_for_save): set Software
	to "GIMP", not "The GIMP".

2006-07-16  Sven Neumann  <sven@gimp.org>

	* app/errors.h (gimp_fatal_error, gimp_terminate): use G_GNUC_PRINTF.

2006-07-14  Maurits  <m.rijk@chello.nl>

	* plug-ins/imagemap/imap_grid.h
	* plug-ins/imagemap/imap_main.c
	* plug-ins/imagemap/imap_menu.c: fixed problem with zoom menu

2006-07-14  Mukund Sivaraman  <muks@mukund.org>

	* app/config/gimpbaseconfig.c: if possible, detect the number of
	online CPUs in the system and use that instead of the default value